# laser-squad-clone

./: .gitignore  README.md
src/: Ammo.hpp  Animation.hpp  AnimationManager.cpp  AnimationManager.hpp  Button.cpp  Button.hpp  CMakeLists.txt  CMakeSettings.json  ControlsScreen.cpp  ControlsScreen.hpp  EndTurnScreen.cpp  EndTurnScreen.hpp  Exceptions.hpp  Explosion.cpp  Explosion.hpp  Game.cpp  Game.hpp  GameCharacter.cpp  GameCharacter.hpp  GameOverPanel.cpp  GameOverPanel.hpp  GameScreen.cpp  GameScreen.hpp  Grid.cpp  Grid.hpp  GridLoader.cpp  GridLoader.hpp  Health.hpp  Inventory.cpp  Inventory.hpp  Item.hpp  Line.cpp  Line.hpp  MainMenuScreen.cpp  MainMenuScreen.hpp  Map.cpp  Map.hpp  MapEditor.cpp  MapEditor.hpp  NewMapMenuScreen.cpp  (+27 more)
src/img/: lineofsight_shader.frag
src/levels/: big_level.json  courtyard.json  debug_level.json  default_level1.json  default_level2.json  default_level3.json  killhouse.json  level3.json  temple.json  test_level.json  warehouse.json
src/test/: test_Button.cpp  test_Game.cpp  test_Grid.cpp  test_GridLoader.cpp  test_Inventory.cpp  test_lasersquad.cpp
